--- a/Traffic_Sign_Classifier.html
+++ b/Traffic_Sign_Classifier.html
@@ -15295,7 +15295,7 @@ AAAAAElFTkSuQmCC
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="Q-2-Model-architecture">Q-2 Model architecture<a class="anchor-link" href="#Q-2-Model-architecture">&#182;</a></h3><p>I used <a href="http://yann.lecun.com/exdb/publis/pdf/sermanet-ijcnn-11.pdf">Pierre Sermanet and Yann LeCun's Multiscale convnet architecture</a>. It has 3 convolutional layers for feature extraction, followed by pooling layers and finally a fully connected layer for softmax classification. The unique characterisitc of multi scale features is that the conv layers' output is not only forwarded into subsequent layer, but is also branched off and fed into classifier (e.g. fully connected layer).</p>
-<p><img src="https://github.com/saurabh3949/CarND-Traffic-Sign-Classifier/blob/master/images/arch.PNG" alt="Network architecture"></p>
+<p><img src="https://github.com/saurabh3949/CarND-Traffic-Sign-Classifier/blob/master/images/arch.PNG?raw=true" alt="Network architecture"></p>
 
 </div>
 </div>
